# research-intelligence-assistant

./: .env.example  .gitignore  API_CHECKLIST.md  API_DEPLOYMENT.md  API_EXAMPLES.md  FASTAPI_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  METRICS_INTEGRATION.md  METRICS_QUICK_START.md  MVP_TEST_README.md  ORCHESTRATOR_TEST_RESULTS.md  QUICK_START.md  QUICK_START_API.md  QUICK_START_GUIDE.md  RANKING_TEST_README.md  README.md  README_REPORT.md  REPORT_IMPLEMENTATION.md  RUN_TEST.sh  SEMANTIC_SCHOLAR_HTTP_429_FIX.md  SEMANTIC_SCHOLAR_IMPLEMENTATION.md  SEMANTIC_SCHOLAR_QUICKSTART.md  SERPAPI_FIX_SUMMARY.md  SERPAPI_SETUP.md  TASK_6.1_SUMMARY.md  TASK_7_1_SUMMARY.md  TEST_METRICS_README.md  TEST_MVP_E2E.md  WORKSPACE_IMPLEMENTATION.md  app.py  debug_metric_suggestions.py  demo_fixed_metric_bank.py  index.html  main.py  pyproject.toml  requirements.txt  test_analytics.py  test_api.py  test_chroma_integration.py  (+26 more)
docs/: google_patents_adapter.md  llm_client.md
examples/: google_patents_usage.py  llm_usage_example.py
ria/: __init__.py  analytics.py  comparison_matrix.py  langsmith_analytics.py  llm.py  metrics.py  metrics_bank.py  models.py  orchestrator.py  pdf_export.py  ranking.py  report.py  research_cache.py  ui_template.html  workspace.py
ria/adapters/: PATENT_ADAPTERS.md  __init__.py  base.py  google_patents.py  mock_patent.py  patentsview.py  semantic_scholar.py  serpapi_patents.py
ria/agents/: __init__.py  comparison_agent.py  metric_bank_agent.py
test_integration_workspaces/position-based-dynamics/: metadata.json  orchestrator_result.json
test_report_output/: report.md
tests/: __init__.py
(+29 files in other folders)
